# se-toolkit-lab-8

./: .env.docker.secret.bak.accesskey  REPORT.md
caddy/: Caddyfile
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __main__.py  observability.py  server.py  settings.py
nanobot/: Dockerfile  config.json.bak  entrypoint.py  pyproject.toml  run-mcp-lms.sh
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
