[project]
name = "nanobot"
version = "0.1.0"
description = "Nanobot app for LMS lab"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "nanobot-ai @ https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip",
  "mcp-lms",
  "nanobot-webchat",
  "mcp-webchat",
]

[tool.uv.sources]
mcp-lms = { path = "../mcp/mcp-lms", editable = true }
nanobot-webchat = { path = "../nanobot-websocket-channel/nanobot-webchat", editable = true }
mcp-webchat = { path = "../nanobot-websocket-channel/mcp-webchat", editable = true }
