[project]
name = "mcp-obs"
version = "0.1.0"
description = "Observability MCP tools for VictoriaLogs and VictoriaTraces"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "mcp>=1.6.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]
